--- a/week6/css/pos-start.css
+++ b/week6/css/pos-start.css
@@ -135,39 +135,36 @@
 /* Activity 5 Styles */
 .content5 {
   /* Activity Five Container */
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  
   height: 400px;
 }
 .red5 {
   width: 100%;
   height: 100px;
   background-color: red;
-  grid-column: 1 / 4;
+  
 }
 .green5 {
   width: 100px;
   height: 150px;
   background-color: green;
   float: left;
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-  z-index: 1;
+  margin-right: 10px;
+  padding: 10px;
+  
 }
 .yellow5 {
-  width: 600px;
+  width: 100%;
   height: 300px;
   background-color: gold;
-  grid-column: 1 / 4;
-  grid-row: 2 / 3;
+  padding-bottom: 10px;
+  
 }
 .blue5 {
   width: 100%;
   height: 100px;
   background-color: blue;
-  grid-column: 1 / 4;
-  grid-row: 4;
+  
 }
 
 /* Activity 6 Styles */
