--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -51,7 +51,7 @@ header {
 .header__bar ul a {
     text-decoration: none;
     letter-spacing: 2px;
-    color: var(--body_color);
+    color: #fff;
     transition-duration: 0.4s;
     font-size: 20px;
 }
